# cat-game

./: .gitignore  Cargo.toml  README.md  generate_cat.py  generate_sounds.py  settings.ron
.github/workflows/: rust.yml
assets/models/: cat.glb
assets/shaders/: pause_blur.wgsl  rock_material.wgsl
src/: area.rs  audio.rs  camera.rs  cat.rs  loading.rs  main.rs  settings.rs  state.rs
src/characters/: cat.rs  mod.rs
src/game/: area.rs  camera.rs  cave.rs  crystal_cavern.rs  interactables.rs  mod.rs
src/render/: blur.rs  mod.rs  rock.rs
src/ui/: areas_menu.rs  common.rs  main_menu.rs  mod.rs  options_menu.rs  paused_menu.rs
