[package]
name = "stray_embers"
version = "0.1.0"
edition = "2024"

[features]
debug = []

[dependencies]
bevy = { version = "0.18.0", features = ["experimental_bevy_ui_widgets", "wav"] }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.9"
strum = { version = "0.28.0", features = ["derive"] }
